<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:baselineAligned="false"
android:descendantFocusability="blocksDescendants">

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_item_margin"
        android:layout_marginTop="@dimen/list_item_margin"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/list_item_label_length"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/name"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="@dimen/list_item_text_view_length"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/label_text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_item_margin"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/list_item_label_length"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/quantities"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/quantities_text_view"
            android:layout_width="@dimen/list_item_text_view_length"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/label_text_size"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_item_margin"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/list_item_label_length"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/price"
            android:textSize="@dimen/label_text_size" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="@dimen/list_item_text_view_length"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/label_text_size"/>
    </RelativeLayout>


</LinearLayout>

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="20dp">

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/button_sale" />
</LinearLayout>
</LinearLayout>