<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewProductActivity"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/new_product_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/new_product_margin_up"
        android:layout_marginLeft="@dimen/new_product_margin_left"
        android:layout_marginRight="@dimen/new_product_margin_right">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_item_margin"
        android:layout_marginTop="@dimen/list_item_margin"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/list_item_label_length"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/name"
            android:textSize="@dimen/label_text_size" />

        <EditText
            android:id="@+id/new_name_edit_text"
            android:layout_width="@dimen/list_item_text_view_length"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/label_text_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_item_margin"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/list_item_label_length"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/quantities"
            android:textSize="@dimen/label_text_size" />

        <EditText
            android:id="@+id/new_quantities_edit_text"
            android:layout_width="@dimen/list_item_text_view_length"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/label_text_size"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/list_item_margin"
        android:layout_marginBottom="@dimen/list_item_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/list_item_label_length"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/price"
            android:textSize="@dimen/label_text_size" />

        <EditText
            android:id="@+id/new_price_edit_text"
            android:layout_width="@dimen/list_item_text_view_length"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/label_text_size"/>
    </RelativeLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_product_linear_layout"
        android:layout_marginTop="@dimen/new_product_margin_up"
        android:layout_centerHorizontal="true"
        android:id="@+id/save_new_product_button"
        android:text="@string/save"
        android:textSize="@dimen/button_text_size"/>
</RelativeLayout>